# radiofrance-downloader

./: .envrc  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/radiofrance_downloader/: __init__.py  __main__.py  api.py  cli.py  config.py  downloader.py  exceptions.py  models.py  rss.py  scraper.py
tests/: conftest.py  test_api.py  test_cli.py  test_downloader.py  test_models.py  test_rss.py  test_scraper.py
tests/fixtures/: api_diffusions_response.json  api_search_response.json  episode_page.html  sample_rss.xml  show_page.html
