[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radiofrance-downloader"
version = "0.1.0"
description = "Download Radio France podcasts (France Inter, France Culture, France Musique, FIP, Mouv', franceinfo, France Bleu)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "chocobn69" }]
keywords = ["radio", "france", "podcast", "downloader", "radiofrance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
radiofrance-dl = "radiofrance_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/chocobn69/radiofrance-downloader"
Repository = "https://github.com/chocobn69/radiofrance-downloader"
Issues = "https://github.com/chocobn69/radiofrance-downloader/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.8",
]
